Rebrand UI and clarify axis interpretation

--- a/index.html
+++ b/index.html
@@ -4,14 +4,22 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>US Political Self-Insight Quiz</title>
+  <link rel="stylesheet" href="https://use.typekit.net/umi6cye.css">
   <link rel="stylesheet" href="styles.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-  <main id="app" class="app-shell">
-    <header class="app-header">
-      <h1>US Political Self-Insight Quiz</h1>
-      <p class="subtitle">32 questions, 8 dimensions, neutral self-insight output.</p>
+  <div class="tcb-flags" aria-hidden="true">
+    <a href="https://www.thecookblog.com"><div class="flag c"></div></a>
+    <a href="https://www.thecookblog.com"><div class="flag o"></div></a>
+    <a href="https://www.thecookblog.com"><div class="flag o"></div></a>
+    <a href="https://www.thecookblog.com"><div class="flag k"></div></a>
+  </div>
+
+  <main id="app" class="page app-shell">
+    <header class="hero app-header">
+      <h1>Political C</h1>
+      <p class="subtitle">US political self-insight quiz across 8 dimensions.</p>
     </header>
 
     <section id="view-error" class="view hidden" aria-live="assertive">
@@ -54,14 +62,16 @@
 
     <section id="view-results" class="view hidden">
       <h2>Your Results</h2>
+      <p class="results-note">Each axis is scored from 0% to 100%. Low scores lean toward the second term in the axis name; high scores lean toward the first term.</p>
       <canvas id="results-chart" width="700" height="700" aria-label="Radar chart of axis scores"></canvas>
+      <div id="results-summary" class="results-summary"></div>
       <div class="table-wrap">
         <table>
           <thead>
             <tr>
               <th>Axis</th>
               <th>Score</th>
-              <th>Interpretation</th>
+              <th>Direction</th>
             </tr>
           </thead>
           <tbody id="results-tbody"></tbody>
