--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="https://use.typekit.net/umi6cye.css">
   <link rel="stylesheet" href="styles.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
 </head>
 <body>
   <div class="tcb-flags" aria-hidden="true">
@@ -18,7 +20,7 @@
 
   <main id="app" class="page app-shell">
     <header class="hero app-header">
-      <h1>Political C</h1>
+      <h1><span>Politi</span><span class="title-accent">calc</span></h1>
       <p class="subtitle">US political self-insight quiz across 8 dimensions.</p>
     </header>
 
@@ -62,6 +64,11 @@
 
     <section id="view-results" class="view hidden">
       <h2>Your Results</h2>
+      <div id="persona-panel" class="persona-panel">
+        <p class="persona-kicker">Your Profile</p>
+        <h3 id="persona-name"></h3>
+        <p id="persona-summary" class="persona-summary"></p>
+      </div>
       <p class="results-note">Each axis is scored from 0% to 100%. Low scores lean toward the second term in the axis name; high scores lean toward the first term.</p>
       <canvas id="results-chart" width="700" height="700" aria-label="Radar chart of axis scores"></canvas>
       <div id="results-summary" class="results-summary"></div>
@@ -79,8 +86,7 @@
       </div>
       <div class="button-row">
         <button id="retake-button" type="button">Retake quiz</button>
-        <button id="copy-json-button" type="button" class="secondary">Copy results JSON</button>
-        <button id="download-json-button" type="button" class="secondary">Download results</button>
+        <button id="download-pdf-button" type="button" class="secondary">Export results PDF</button>
       </div>
       <p id="results-feedback" class="feedback" aria-live="polite"></p>
     </section>
