--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <h3 id="persona-name"></h3>
         <p id="persona-summary" class="persona-summary"></p>
       </div>
-      <p class="results-note">Each axis is scored from 0% to 100%. Low scores lean toward the second term in the axis name; high scores lean toward the first term.</p>
+      <p class="results-note">Each dimension is scored from 0% to 100%. Each card shows exactly what low and high values represent.</p>
       <canvas id="results-chart" width="700" height="700" aria-label="Radar chart of axis scores"></canvas>
       <div id="results-summary" class="results-summary"></div>
       <div class="table-wrap">
